--- a/README
+++ b/README
@@ -1,18 +1,17 @@
-Тестовое задание для JAVA EE Developer
-
-Необходимо реализовать серверное приложение  осуществляющее операцию аутентификации пользователя. 
+AuthCore
+- серверное приложение осуществляющее операцию аутентификации пользователя.
 
 Взаимодействие клиент/сервер происходит по протоколу webSocket(http://ru.wikipedia.org/wiki/WebSocket). Запросы к серверу и ответы от него передаются в формате JSON(http://ru.wikipedia.org/wiki/JSON). 
 
-Приложение должно обеспечивать следующие процессы:
+Приложение обеспечивает следующие процессы:
 — аутентификацию пользователя
-— приложение должно принимать запрос LOGIN_CUSTOMER проверять наличие данного пользователя в базе с указанным паролем и возвращать либо сообщение об успешно аутентификации с токеном и датой его истечения, либо сообщение об ошибке
+— принимает запрос LOGIN_CUSTOMER, проверяет наличие данного пользователя в базе с указанным паролем и возвращает либо сообщение об успешной аутентификации с токеном и датой его истечения, либо сообщение об ошибке
 — хранение токенов пользователей 
-— приложение должно вести базу выданных пользователям токенов.
-— приложение должно вести историю токенов пользователей.
-— приложение должно сбрасывать токен пользователя если он запрашивает повторную аутентификацию.
+— ведет базу выданных пользователям токенов.
+— ведет историю токенов пользователей.
+— сбрасывает токен пользователя если он запрашивает повторную аутентификацию.
 
-Описание протокола 
+Описание протокола:
 
 Описание структуры исходящего сообщения:
 { 
@@ -28,7 +27,7 @@
   “data” : {} // объект, содержит данные ответа
 }
 
-В случае возврата сообщения об ошибке, объект data должен содержать следующие поля:
+В случае возврата сообщения об ошибке, объект data содержит следующие поля:
 "error_description":"Customer not found”, // поле с описанием ошибки
 "error_code":"customer.notFound” // поле с кодом ошибки
 
@@ -72,14 +71,14 @@
   }
 }
 
-Разрешается использовать любые фреймворки, а так же maven и gradle.
-Application Server на выбор, предпочтение отдается wildfly.
-Проект необходимо предоставить целиком.
-
-Необходимо самостоятельно организовать:
-— поддержку связанности сообщений, в описании протокола средства для этого заложены
-— обработку ошибок;
-— работу с БД;
-— по необходимости работу с конфигурационными файлами;
-— по необходимости работу с WebSocket сессиями
-— приложение должно быть готово к работе большого числа пользователей через разные WebSocket сессии.
+Environment:
+* Java 7
+* Maven
+* JUnit
+* Java WebSocket
+* JSON
+* EJB 3.0
+* Hibernate (JPA 2.1)
+* H2 Database
+* wildfly-9.0.2.Final
+* log4j
